--- a/client/src/views/ForumView/Foro.module.css
+++ b/client/src/views/ForumView/Foro.module.css
@@ -90,15 +90,17 @@ body html {
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    padding: 1.5rem;
-    border-bottom: var(--color-primario) solid 1px ;
+    /* padding: 0.9rem; */
+    border-bottom: #00559226 solid 1px ;
+    border-left:#0055927b solid 1px ;
     transition: 0.5s;
-    min-height: 32vh;
-    max-height: 32vh;
+    min-height: 20vh;
     max-width: 60vw;
     min-width: 60vw;
     margin: 10px;
     background-color: var(--color-cuartiario);
+    border-radius: 10px;
+    box-shadow: -1px 1px 8px rgba(55, 172, 255, 0.064);
     
 }
 .contain button:hover{
@@ -108,22 +110,29 @@ body html {
 .contain p{
     font-size: 1.1em;
 }
+.contain h1{
+    border: 1px solid #00559226;
+    width: 60vw;
+    padding: 0.3rem;
+    border-radius: 5px 5px 0 0 ;
+    background-color: #0f3054;
+    color: #FFF;
+}
 .contain button{
     display: flex;
     flex-direction: row;
     border: none !important;
     align-items: center;
-    justify-content: center;
+    height: 5vh;
     padding: 0.4rem; 
     margin-top: 1rem;
     font-size: 0.9rem;
     background: var(--blue_color);
     border-radius: 5px;
-    min-height: 5vh;
-    max-height: 5vh;
     transition: 0.3s;
     color: #FFF;
     cursor: pointer; 
+
 }
 .contain button:hover{
     background: #034879;
@@ -132,10 +141,11 @@ body html {
 
 .anwers {
     display: flex;
-    flex-direction: row;
+    flex-direction: column  ;
     align-items: end;
     justify-content: end;
-    /* margin: 5px; */
+    width: 100%;
+    padding: 0.4rem;
 }
 
 .div {
@@ -146,7 +156,9 @@ body html {
 .center{
     display: flex;
     flex-direction: column;
-    width: 57vw;
+}
+.center p{
+    margin: 1rem
 }
 
 @media (max-width: 575.98px) {  
@@ -163,16 +175,14 @@ body html {
     }
     .contain a{
         font-size: 0.8em;
-        /* width: 40vw; */
-        /* margin: 10pxs; */
     }
     .contain p{
         font-size: 1em;
-        margin: 0.5rem;
     }
     
     .div{
         width:70vw;
+        margin: 1rem;
         
     }
     .contain button{
