--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -1,6 +1,6 @@
 
 .Post {
-    width: 70%;
+    width: 650px;
     margin: 10px 0;
     border-radius: 5px;
     background-color: var(--lightblue);
