--- a/client/src/views/ProfileView/Profile.css
+++ b/client/src/views/ProfileView/Profile.css
@@ -128,6 +128,7 @@
     display: grid;
     grid-template-columns: 1fr 3fr;
     margin-bottom: 10px;
+    margin: 0;
 }
 .profile__drawer--links{
         display:flex;
