--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -25,7 +25,7 @@
         border-top-left-radius: 5px;
         background-color: var(--darkblue);
         color: white;
-        padding: 2px
+        padding: 6px
     }
 
     .Post__Organization {
@@ -33,7 +33,7 @@
         align-items: center;
         overflow: hidden;
         text-overflow: ellipsis;
-        padding: 2px;
+        padding: 6px;
         background-color: var(--blue);
         color: rgb(225, 225, 225);
 
@@ -94,7 +94,7 @@
         background-color: var(--darkblue);
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
-        padding: 2px
+        padding: 6px
     }
         .BottomBar__calendarIcon {
             color: white;
@@ -130,6 +130,12 @@
                     color: white;
                     width: 30px;
                     height: 30px;
+                }
+                .likeNumber {
+                    color: white;
+                    margin: 5px;
+                    font-weight: 700;
+                    font-size: 1.2em
                 }
             .SocialIcons__commentContainer {
                 flex: 1;
