--- a/client/src/views/PostDetailView/postDetail.module.css
+++ b/client/src/views/PostDetailView/postDetail.module.css
@@ -10,80 +10,57 @@
     
 }
 .contain img{
-   width: 30vw;
-   height: 40vh;
+   width: 40vw;
+   height: 80vh;
    border-radius: 5px;
    margin: 1.5rem;
 }
 .contain{
-    padding: 10px 100px;
-    background: var(--sky_color);
+    padding: 10px 80px;
     width: 100vw;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    /* background:  var(--sky_color); */
     
 }
-.title{
+.Detail{
     display: flex;
     flex-direction: column;
     padding: 0.4rem;
-    width: 60vw;
-    /* color:#FFF; */
+    width: 50vw;
+    border: 1px rgba(0, 0, 0, 0.191) solid;
+    /* background-color: var(--blue_color); */
+    /* color: #FFF; */
+    justify-content: center;
 }
-.title h1{
+.Detail h1{
     font-size: 2rem;
+    display: block;
+    border-bottom: 1px rgba(0, 0, 0, 0.291) solid;
+    padding: 1rem;
 }
-.title a{
+.Detail k{
     background-color: var(--blue_color);
-    display: flex;
     margin: 0.8rem;
     width: fit-content; 
     padding: 0.4rem;
     border-radius: 15px;
     font-size: 0.7rem;
 }
-.title p{
-    font-size: 1rem;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.Detail p{
+    font-size:0.9rem;
 }
-.text{
+
+
+.header{
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    margin: 10px;
 }
-.Detail{
+.text{
     padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    /* border: 1px red solid; */
-    margin: 1rem;
-    width: 60vw;
-
-}
-.Detail h2{
-    /* margin: 1rem; */
-    padding: 0.4rem;
-    font-size: 2rem;
-    
-}
-.title2{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 60vw;
-    border-bottom: 1px #44617a60 solid;
-    
-}
-.Detail h3{
-    padding: 0.4rem;
-    font-size: 1rem;
-}
-.Detail p{
-    font-size: 1rem;
     margin: 0.4rem;
+
 }
