--- a/client/src/views/QuestionView/QuestionDetail.module.css
+++ b/client/src/views/QuestionView/QuestionDetail.module.css
@@ -209,7 +209,21 @@
     font-size: 1.2em;
     margin: 10px;
 }
+.buttonDisable{
+    display: flex;
+    margin: 1rem;
+    padding: 0.5rem 1rem;
+    padding: 0.5rem 1rem;
+    background-color: #095084;
+    border: #095084;
+    transition: 0.2s;
+    color: #fff;
+    transition: 0.2s;
+    border-radius: 5px;
+    cursor: pointer;
+    opacity: 0.7;
 
+}
 @media (max-width: 575.98px){
     .question textarea{
         width: 70vw;
