--- a/client/src/components/Posts/posts.module.css
+++ b/client/src/components/Posts/posts.module.css
@@ -12,8 +12,9 @@
     .Cards {
         width: 100%;
         display: flex;
-        flex-direction: column-reverse;
         align-items: center;
+        height: 100%;
+        flex-direction: column;
     }
 
 @media screen and (max-width:768px) {
