--- a/client/src/components/auth/password/reset.module.css
+++ b/client/src/components/auth/password/reset.module.css
@@ -21,7 +21,7 @@
     width: 100%;
     margin: 0 auto;
     border: none;
-    padding: 1rem 0;
+    padding: 1rem ;
     border: 1px solid #cbd5e1;
 }
 .email__button {
@@ -37,6 +37,48 @@
 }
 
 .email__button:hover {
+    cursor: pointer;
+    background: var(--dark_blue_color);
+}
+
+.email__button__ok{
+    width: 50%;
+    margin: 1rem auto;
+    color: #fff;
+    background: var(--blue_color);
+    border: none;
+    padding: 0.5rem 0;
+    font-size: 1.3rem;
+    font-weight: 900;
+}
+.email__button__ok:hover {
+    cursor: pointer;
+    background: var(--dark_blue_color);
+}
+
+
+.reset__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 50vh;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.password__button__ok{
+    width: 50%;
+    margin: 1rem auto;
+    color: #fff;
+    background: var(--blue_color);
+    border: none;
+    padding: 0.5rem 0;
+    font-size: 1.3rem;
+    font-weight: 900;
+
+}
+.password__button__ok:hover {
     cursor: pointer;
     background: var(--dark_blue_color);
 }
