fix-route and add styles password

--- a/client/src/components/auth/password/reset.module.css
+++ b/client/src/components/auth/password/reset.module.css
@@ -35,6 +35,12 @@
     font-weight: 900;
    
 }
+.email__error{
+    color : #ff0000;
+    margin : 0 auto 0.5rem auto;
+    text-align: center;
+
+}
 
 .email__button:hover {
     cursor: pointer;
@@ -66,9 +72,35 @@
     width: 50%;
     margin: 0 auto;
 }
+.password__field{
+    display: block;
+    width: 100%;
+    margin: 1rem auto;
+}
+.password__container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 50vh;
+    width: 50%;
+    margin: 0 auto;
+}
+.password__label {
+    display: block;
+    margin-bottom : 1rem;
+}
+.password__input {
+    margin-bottom: 1rem;
+    width: 100%;
+    margin: 0 auto;
+    border: none;
+    padding: 1rem ;
+    border: 1px solid #cbd5e1;
+}
 
 .password__button__ok{
-    width: 50%;
+    width: 100%;
     margin: 1rem auto;
     color: #fff;
     background: var(--blue_color);
@@ -81,4 +113,8 @@
 .password__button__ok:hover {
     cursor: pointer;
     background: var(--dark_blue_color);
+}
+.password__error{
+    color : #ff0000;
+    margin : 0 auto 0.5rem auto;
 }
