--- a/client/src/components/LeftBar/leftBar.module.css
+++ b/client/src/components/LeftBar/leftBar.module.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-right: solid #526387 1px;
 }
 
     .LeftBar__Buttons {
@@ -56,6 +57,8 @@
     cursor: inherit;
     /* border: solid var(--lightblue) 4px; */
 }
+
+
 
 @media screen and (max-width: 768px) {
     .LeftBar {
