filtro para usuarios agregado

--- a/client/src/components/Post/post.module.css
+++ b/client/src/components/Post/post.module.css
@@ -123,6 +123,11 @@
                 align-items: center;
                 transition: background-color 0.3s;
             }
+                .likeNumber {
+                    color: white;
+                    font-size: 1.2em;
+                    margin-left: 5px;
+                }
             .SocialIcons__likeContainer:hover {
                 background-color: var(--blue)
             }
