--- a/client/src/components/Posts/posts.module.css
+++ b/client/src/components/Posts/posts.module.css
@@ -16,6 +16,23 @@
         flex-direction: column;
     }
 
+    .Posts__NoPosts {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+        .NoPosts__icon {
+            height: 300px;
+            width: 300px;
+            color: var(--blue);
+        }
+
+        .NoPosts__Text {
+            text-align: center;
+        }
+
 @media screen and (max-width:768px) {
     .Posts {
         width: 100%
