add some styles responsive to admin

--- a/client/src/components/dashboard/Users/users.module.css
+++ b/client/src/components/dashboard/Users/users.module.css
@@ -1,4 +1,30 @@
 .users__container {
     width: 90%;
     margin: 2rem auto;
+    overflow-x: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+.users__container::-webkit-scrollbar {
+    display: none;
+  }
+@media(min-width: 768px){
+    
+}
+.users__flex {
+    display: flex;
+   
+    
+}
+
+.users__table{
+    
+}
+
+.users__head {
+
+}
+
+.users__body {
+
 }
