--- a/client/src/views/QuestionView/QuestionDetail.module.css
+++ b/client/src/views/QuestionView/QuestionDetail.module.css
@@ -224,6 +224,13 @@
     opacity: 0.7;
 
 }
+.option{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: end;
+    position: relative;
+}
 @media (max-width: 575.98px){
     .question textarea{
         width: 70vw;
