--- a/client/src/views/PostDetailView/postDetail.module.css
+++ b/client/src/views/PostDetailView/postDetail.module.css
@@ -5,8 +5,8 @@
 .DetailView {
     display: flex;
     flex-direction: column;
-    align-items: center;
-   
+    align-items: center;  
+    justify-content: center;
     
 }
 .contain img{
@@ -21,8 +21,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    /* background:  var(--sky_color); */
-    
 }
 .Detail{
     display: flex;
@@ -30,8 +28,7 @@
     padding: 0.4rem;
     width: 50vw;
     border: 1px rgba(0, 0, 0, 0.191) solid;
-    /* background-color: var(--blue_color); */
-    /* color: #FFF; */
+    box-shadow: -1px 1px 8px rgba(209, 206, 206, 0.363);
     justify-content: center;
 }
 .Detail h1{
@@ -40,14 +37,7 @@
     border-bottom: 1px rgba(0, 0, 0, 0.291) solid;
     padding: 1rem;
 }
-.Detail k{
-    background-color: var(--blue_color);
-    margin: 0.8rem;
-    width: fit-content; 
-    padding: 0.4rem;
-    border-radius: 15px;
-    font-size: 0.7rem;
-}
+
 .Detail p{
     font-size:0.9rem;
 }
@@ -57,10 +47,50 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     margin: 10px;
 }
+.header h3{
+    font-size: 1.1rem;
+}
 .text{
+    position: relative;
     padding: 2rem;
     margin: 0.4rem;
+    border-top: 1px rgba(0, 0, 0, 0.291) solid;
+    border-bottom: 1px rgba(0, 0, 0, 0.291) solid;
+    box-shadow: -1px 1px 10px rgba(255, 255, 255, 0.575);
+}
 
+.text::before{
+    content: "";
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    border: 1px solid transparent;
+    background: linear-gradient(45deg, rgb(255, 255, 255), rgb(255, 255, 255));
+    -webkit-background-clip: border-box;
+    -moz-background-clip: border-box;
+    background-clip: border-box;
+    z-index: -1;
+}
+.category{
+    margin-bottom: 0px;
+    margin-top: 2rem;
+    background: black;
+    color: #fff;
+    padding: 0.4rem;
+    border-radius: 10px;
+    width: fit-content;
+}
+.link{
+    color: blue;
+    font-size: 1.1rem;
+    opacity: 0.7;
+    transition: 0.2s;
+}
+.link:hover{
+    color: blue;
+    opacity: 1;
+    transition: 0.2s;
+    transform: scale(1.05);
 }
