--- a/client/src/components/dashboard/Sidebar/sidebar.module.css
+++ b/client/src/components/dashboard/Sidebar/sidebar.module.css
@@ -1,6 +1,8 @@
 .sidebar {
     display: flex;
     background: #fff;
+    width: 100%;
+   
 }
 
 @media(min-width: 768px) {
@@ -39,14 +41,14 @@
     margin: 0.5rem auto;
     color: #000;
     font-weight: 700;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 @media(min-width: 768px){
     .sidebar__title {
         color: #fff;
-           font-size: 1.4rem;
-           font-weight: 900;
+        font-size: 1.4rem;
+        font-weight: 900;
     }
 }
 
@@ -57,6 +59,13 @@
     align-items: center;
     justify-content: space-around;
     margin: 1rem auto;
+    flex-wrap: wrap;
+    row-gap: 0.5rem;
+
+}
+
+.sidebar__links::-webkit-scrollbar {
+    display: none;
 }
 
 .sidebar__links a {
