--- a/client/src/views/ForumView/Foro.module.css
+++ b/client/src/views/ForumView/Foro.module.css
@@ -17,6 +17,7 @@ body html {
 .containerCenter{
     display: flex;
     flex-direction: row;
+    align-items: center;
     display: 100vw;
     min-height: 100vh;
     height: 100vh;
@@ -25,7 +26,7 @@ body html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start; 
+    margin-left: 6rem;
     padding: 10px;
     height: 100vh;
     min-height: 100vh;
@@ -34,10 +35,11 @@ body html {
     font-family: 'MiFuenteBold';
     margin: 10px;
 }
-.container h1{
+.titleCenter{
     font-family: 'MiFuenteBold';
     font-weight: bold;  
     color: black;
+    margin: 0.4rem;
    }
 .contain:hover{
     transition: 0.3s;
@@ -50,13 +52,13 @@ body html {
     /* padding: 0.9rem; */
     border-left:#0055927b solid 1px ;
     transition: 0.5s;
-    min-height: 20vh;
-    max-width: 60vw;
-    min-width: 60vw;
-    margin: 10px;
-    background-color: var(--color-cuartiario);
+    margin: 0.7rem;
     border-radius: 10px;
+    background: var(--color-cuartiario);
     box-shadow: -1px 1px 8px rgba(55, 172, 255, 0.064);
+    width: 50vw;
+    min-width: 50vw;
+    max-width: 50vw;
     
 }
 .contain button:hover{
@@ -64,12 +66,16 @@ body html {
     transition: 0.3s;
 }
 .contain h1{
+    display: flex;
     border: 1px solid #00559226;
-    width: 60vw;
+    justify-content: center;
+    align-items: center;
+    width: 50vw;
     padding: 0.6rem;
-    border-radius: 5px 5px 0 0 ;
+    border-radius: 5px 5px 0 0;
     background-color: #0f3054;
     color: #FFF;
+    overflow: auto;
 }
 .contain button{
     display: flex;
@@ -87,6 +93,7 @@ body html {
     cursor: pointer; 
 
 }
+
 .contain button:hover{
     background: #034879;
 
@@ -99,6 +106,7 @@ body html {
     justify-content: end;
     width: 100%;
     background-color:#0f3054;
+    border-radius: 0 0px 5px 5px;
 }
 .anwers p{
     margin: 0.5rem;
