--- a/client/src/components/Notifications/notification.css
+++ b/client/src/components/Notifications/notification.css
@@ -2,9 +2,9 @@
     color: #005692 !important;
 }
 
-.ant-notification-notice-icon {
-    color: red !important;
+.ant-notification-notice-title{
+    font-size:1.2rem !important;
 }
 .ant-notification-notice-description{
-    font-size:2rem;
+    font-size:1.2rem !important;
 }
