--- a/client/src/views/QuestionView/QuestionDetail.module.css
+++ b/client/src/views/QuestionView/QuestionDetail.module.css
@@ -267,6 +267,14 @@
     font-size: 0.7rem;
     color: #7d7d7d;
 }
+.edit{
+    display: flex;
+    align-items: end;
+    justify-content: end;
+}
+.edit a{
+    margin: 0.4rem;
+}
 @media (max-width: 575.98px){
     .question textarea{
         width: 70vw;
