nueva organizacion de filtros y ordenamiento

--- a/client/src/components/LeftBar/leftBar.module.css
+++ b/client/src/components/LeftBar/leftBar.module.css
@@ -1,6 +1,5 @@
 .LeftBar {
     width: 30%;
-    height: 100%;
     max-height: 100%;
     display: flex;
     flex-direction: column;
@@ -44,11 +43,37 @@
             width: 90%;
         }
 
-        .Filters__date {
-            width: 80%;
+    
+
+    .Filters {
+        border-top: solid #526387 2px;
+        flex: 1;
+        width: 100%;
+    }
+        .Filters__Buttons {
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
+            padding: 13px;
         }
+            .Buttons__button {
+                height: 40px;
+                border: solid #526387 2px;
+                border-radius: 10px;
+                width: 40%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: var(--lightblue);
+                transition: border, color, background-color 0.2s;
+                font-size: 1.2em;
+            }
+            .Buttons__button:hover {
+                background-color: var(--darkblue);
+                color: white;
+                cursor: pointer;
+            }
+
+    
            
 
 #active {
@@ -59,8 +84,14 @@
 }
 
 
+@media screen and (max-width: 1145px) {
+    .Buttons__button {
+        width: 45%
+    }
+}
 
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 992px) {
     .LeftBar {
         width: 100%;
     }
@@ -71,6 +102,26 @@
     #LeftBar__Filters {
         flex-direction: column;
     }
+    .Filters-Button {
+        background-color: var(--blue);
+        border-radius: 0;
+        min-width: 100%;
+        min-height: 45px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .Filters-Button__text {
+        font-size: 1.5em;
+        font-weight: 600;
+    }
+
+    .Filters-Button__Icon {
+        height: 30px;
+        width: 30px;
+    }
+    
 }
 
     
