--- a/client/src/components/Filters/PostsFilters/postFilters.module.css
+++ b/client/src/components/Filters/PostsFilters/postFilters.module.css
@@ -4,9 +4,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 13px 0;
     gap: 10px;
-    border-top: solid #526387 1px;
+    padding-bottom: 13px;
 }
 
     .select {
