--- a/client/src/components/Orderings/ForumOrderings/forumOrderings.module.css
+++ b/client/src/components/Orderings/ForumOrderings/forumOrderings.module.css
@@ -1,13 +1,11 @@
 .Orderings {
-    height: 400px;
-    border-top: solid #526387 1px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
     .title {
-        margin: 10px;
+        margin-bottom: 10px;
     }
 
     .Orderings__select {
@@ -31,4 +29,10 @@
             display: flex;
             flex-direction: column;
         } 
+        .input {
+            height: 17px;
+            cursor: pointer
+        }
+
+        
       
