--- a/client/src/views/PostDetailView/postDetail.module.css
+++ b/client/src/views/PostDetailView/postDetail.module.css
@@ -154,3 +154,8 @@
     align-items: center;
     margin-top: 5px;
 }
+.dateee{
+    display: inline-block;
+    margin-left: 180px;
+    align-items: center;
+}
